# sandbox-jaroslaw-kurek-2026-03-05

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  README.md  commands.txt  poetry-tree.txt  pyproject.toml
config/: .env  .env.example
containers/: ae_api.Dockerfile  docker-compose.yaml
data/autoencoder/: 1.current_properties.pkl  2.current_properties_after_2022_01_01.pkl  3.current_properties_after_2022_preprocessed.pkl  4.current_properties_after_2022_preprocessed_final.pkl  analyze_properties_data_kurekj.py  housing_price_index.jsonl  prices_nbp.tsv  visible_properties_dataset.jsonl
docs/: AUTOENCODER_TRAINING_GUIDE.md  CACHING_MECHANISM_GUIDE.md  HOW_RECOMMENDATION_SCORES_WORK.md  PROPERTIES_EMBEDDING_MODEL_TECHNICAL_GUIDE.md  REDIS_SENTINEL_GUIDE.md
kurekj/: Reranking description.docx  daily_snapshot_offer_performance_metrics_meta_20260120_174227.xlsx  datasets_summary.xlsx  export_daily_snapshot_offer_performance_metrics.py  export_hm_reranking_testgroup.py  export_reranking_parquet_to_excel.py  export_reranking_query_to_parquet.py  optuna_optimize_kurekj_business_params_profit.py  read_datasets.py  recommendations_output_latest10_with_stats.xlsx  run_business_reranking_export_top3_billinggroup_ver0.04.py  run_business_reranking_export_top3_billinggroup_ver0.05.py  run_business_reranking_export_top3_billinggroup_ver0.06.py  run_business_reranking_export_top3_billinggroup_ver0.07_profit.py  run_business_reranking_export_top3_billinggroup_ver0.08_profit_opt.py  run_business_reranking_export_top3_billinggroup_ver0.09_profit_opt.py  run_business_reranking_export_top3_billinggroup_ver0.10_profit_opt.py  run_business_reranking_export_top3_billinggroup_ver0.11_profit_opt.py  run_business_reranking_export_top3_billinggroup_ver0.12_profit_opt.py  run_business_reranking_export_top3_billinggroup_ver0.13_profit_opt.py  run_business_reranking_export_top3_billinggroup_ver0.14_profit_opt.py  run_business_reranking_export_top3_billinggroup_ver0.15_profit_opt.py  run_business_reranking_export_top3_billinggroup_ver0.16_profit_opt.py  run_business_reranking_export_top3_billinggroup_ver0.17_profit_opt_xai.py  run_business_reranking_export_top3_billinggroup_ver0.17_profit_opt_xai_NEWFILE1.py  run_business_reranking_export_top3_billinggroup_ver0.17_profit_opt_xai_NEWFILE1_tradeoff.py  run_business_reranking_export_top3_billinggroup_ver0.18_profit_opt_xai_tradeoff.py  run_business_reranking_export_top3_billinggroup_ver0.18_profit_opt_xai_tradeoff_userfit.py  run_optimize_kurekj_params_profit1.py  run_optimize_kurekj_params_profit2.py  run_optimize_kurekj_params_profit3.py
kurekj/Archive/: compare_top3.xlsx  daily_snapshot_offers_billinggroup_data_20260116_041006.xlsx  daily_snapshot_offers_billinggroup_meta_20260116_041006.xlsx  export_daily_snapshot_offers_billinggroup.py  export_daily_snapshot_offers_billinggroup1.py  run_business_reranking_export_top3_billinggroup_ver0.01.py  run_business_reranking_export_top3_billinggroup_ver0.02.py  run_business_reranking_export_top3_ver0.01.py  run_business_reranking_export_top3_ver0.02.py  run_business_reranking_export_top3_ver0.03.py  run_business_reranking_export_top3_ver0.05.py  run_business_reranking_export_top3_ver0.06.py  run_business_reranking_export_top3_ver0.07.py  run_business_reranking_export_top3_ver0.08.py  run_business_reranking_export_top3_ver0.09.py  run_business_reranking_export_top3_ver0.10.py  run_business_reranking_export_top3_ver0.12.py
kurekj/Output_[optuna_optimize_kurekj_business_params_profit.py]_20260128_052028/: best_params.json  optuna_trials.csv
kurekjTinder/: export_snapshot_homematch_prelead_status.py  snapshot_homematch_prelead_status_data_20260128_062651.xlsx  snapshot_homematch_prelead_status_meta_20260128_062651.xlsx
models/: epoch=34-val_loss=0.0858.ckpt
notebooks/: mailing_stats.ipynb  views_dataset_stats.ipynb
notebooks/offer_autoencoder/: evaluate_performance.ipynb  price_index.ipynb  visible_properties_dataset.ipynb  (+1 more)
scripts/: build.sh  prefill_client_example.py  scoring_client_example.py
stats/: Porównanie.docx  coments.txt  days-2025-12-01-2025-12-08.txt  days-2025-12-01-2026-02-20.txt  days-2025-12-02-2025-12-08.xlsx
tests/: conftest.py  redis_connection_check_kurekj.py  test_binary_cache.py  test_calculate_scores.py  test_embed_properties_schema_dict_resilience.py  test_encode_to_mhot.py  test_feature_coverage.py  test_get_poi_count.py  test_get_scores.py  test_sanitize_feature_columns.py  test_sentinel_cache.py
(+2053 files in other folders)
